--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,33 @@
-version: 2.1
+# Java Maven CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
+#
+version: 2
 jobs:
   build:
     docker:
-      - image: 'circleci/openjdk:latest' # the primary container, where your job's commands are run
-      
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
+
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+    
       - image: circleci/mysql:8.0.15
         command: [--default-authentication-plugin=mysql_native_password]
         environment:
-          - MYSQL_ROOT_PASSWORD: Greenmonster12
+          - MYSQL_ROOT_PASSWORD: password
           - MYSQL_DATABASE: stocks
           - MYSQL_USER: monty
           - MYSQL_PASSWORD: some_pass
           
-          working_directory: ~/repo
+    working_directory: ~/repo
     
     environment:
       # Customize the JVM maximum heap limit
       MAVEN_OPTS: -Xmx3200m
-          
+
     steps:
       - checkout
       - run: sudo apt install mysql-client
