--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,30 +29,30 @@ jobs:
       MAVEN_OPTS: -Xmx3200m
 
     steps:
-      - checkout
+      #- checkout
       #- run: sudo apt install mysql-client
-      - run:
-          name: install dockerize
-          command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
-          environment:
-            DOCKERIZE_VERSION: v0.3.0
-      - run:
-          name: Wait for db
-          command: dockerize -wait tcp://localhost:3306 -timeout 1m
+      #- run:
+         # name: install dockerize
+        #  command: wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && sudo tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+       #   environment:
+      #      DOCKERIZE_VERSION: v0.3.0
+     # - run:
+         # name: Wait for db
+         # command: dockerize -wait tcp://localhost:3306 -timeout 1m
 
       # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "pom.xml" }}
+     # - restore_cache:
+      #    keys:
+       #   - v1-dependencies-{{ checksum "pom.xml" }}
           # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+        #  - v1-dependencies-
 
-      - run: mvn dependency:go-offline
+   #   - run: mvn dependency:go-offline
 
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}
+    #  - save_cache:
+     #     paths:
+      #      - ~/.m2
+       #   key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
       - run: mvn test
