--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - image: circleci/mysql:8.0.15
         command: [--default-authentication-plugin=mysql_native_password]
         environment:
-          - MYSQL_ROOT_PASSWORD: password
+          #- MYSQL_ROOT_PASSWORD: password
           - MYSQL_DATABASE: stocks
           - MYSQL_USER: monty
           - MYSQL_PASSWORD: some_pass
