--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           - MYSQL_USER: monty
           - MYSQL_PASSWORD: some_pass
           
-    working_directory: ~/repo
+    # working_directory: ~/repo
     
     environment:
       # Customize the JVM maximum heap limit
