--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
     
-      - image: circleci/mysql:8.0.15
+      - image: circleci/mysql:5.7
         command: [--default-authentication-plugin=mysql_native_password]
         environment:
-          - MYSQL_ROOT_PASSWORD: password
+         # - MYSQL_ROOT_PASSWORD: password
           - MYSQL_DATABASE: stocks
           - MYSQL_USER: monty
           - MYSQL_PASSWORD: some_pass
