--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,38 +1,49 @@
 # Java Maven CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
-version: 2
-jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-    
-      - image: circleci/mysql:5.7
-        command: [--default-authentication-plugin=mysql_native_password]
-        environment:
-         # - MYSQL_ROOT_PASSWORD: password
-          - MYSQL_DATABASE: stocks
-          - MYSQL_USER: monty
-          - MYSQL_PASSWORD: some_pass
-          
-    # working_directory: ~/repo
-    
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
-
-    steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello cruel world" # run the `echo` command
-      - run: mvn test -f pom.xml
-      - store_test_results:
-          path: target/surefire-reports
-      - store_artifacts:
-          path: target/my-reports
+ 	#
+ 	# Check circleci.com/docs/2.0/language-java for more details
+ 	#
+ 	version: 2
+ 	jobs:
+ 	build:
+ 	docker:
+ 	# specify the version you desire here
+ 	- image: circleci/openjdk:8-jdk
+ 	 
+ 	# Specify service dependencies here if necessary
+ 	# CircleCI maintains a library of pre-built images
+ 	# documented at circleci.com/docs/2.0/circleci-images
+ 	# - image: circleci/postgres:9.4
+ 	- image: circleci/mysql:latest-ram
+ 	environment:
+ 	- MYSQL_ROOT_PASSWORD: some_pass
+ 	- MYSQL_DATABASE: stocks
+ 	- MYSQL_USER: monty
+ 	- MYSQL_PASSWORD: some_pass
+ 	 
+ 	working_directory: ~/repo
+ 	 
+ 	environment:
+ 	# Customize the JVM maximum heap limit
+ 	MAVEN_OPTS: -Xmx3200m
+ 	 
+ 	steps:
+ 	- checkout
+ 	 
+ 	- run: sudo apt install -y mysql-client
+ 	 
+ 	# Download and cache dependencies
+ 	- restore_cache:
+ 	keys:
+ 	- v1-dependencies-{{ checksum "pom.xml" }}
+ 	# fallback to using the latest cache if no exact match is found
+ 	- v1-dependencies-
+ 	 
+ 	- run: mvn dependency:go-offline
+ 	 
+ 	- save_cache:
+ 	paths:
+ 	- ~/.m2
+ 	key: v1-dependencies-{{ checksum "pom.xml" }}
+ 	 
+ 	# run tests!
+ 	- run: mvn integration-test
