--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,48 +4,46 @@
 #
 version: 2
 jobs:
-build:
-docker:
-  # specify the version you desire here
-  - image: circleci/openjdk:8-jdk
+  build:
+    docker:
+      # specify the version you desire here
+      - image: circleci/openjdk:8-jdk
 
-  # Specify service dependencies here if necessary
-  # CircleCI maintains a library of pre-built images
-  # documented at https://circleci.com/docs/2.0/circleci-images/
-  # - image: circleci/postgres:9.4
-  - image: circleci/mysql:latest-ram
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+    
+      - image: circleci/mysql:latest-ram
+        environment:
+          - MYSQL_ROOT_PASSWORD: some_pass
+          - MYSQL_DATABASE: stocks
+          - MYSQL_USER: monty
+          - MYSQL_PASSWORD: some_pass
+          
+    working_directory: ~/repo
+    
     environment:
-      - MYSQL_ROOT_PASSWORD: some_pass
-      - MYSQL_DATABASE: stocks
-      - MYSQL_USER: monty
-      - MYSQL_PASSWORD: some_pass
+      # Customize the JVM maximum heap limit
+      MAVEN_OPTS: -Xmx3200m
 
-working_directory: ~/repo
+    steps:
+      - checkout
+      - run: sudo apt install mysql-client
 
-environment:
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "pom.xml" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
 
-  # Customize the JVM maximum heap limit
-  MAVEN_OPTS: -Xmx3200m
+      - run: mvn dependency:go-offline
 
-steps:
-  - checkout
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
 
-  - run: sudo apt install -y mysql-client
-
-  # Download and cache dependencies
-  - restore_cache:
-
-  keys:
-    - v1-dependencies-{{ checksum "pom.xml" }}
-    # fallback to using the latest cache if no exact match is found
-    - v1-dependencies-
-
-    - run: mvn dependency:go-offline
-
-    - save_cache:
-      paths:
-    - ~/.m2
-      key: v1-dependencies-{{ checksum "pom.xml" }}
-
-    # run tests!
-    - run: mvn integration-test
+      # run tests!
+      - run: mvn integration-test
