--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,8 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo apt install mysql-client
+      - run: sudo apt-get update
+      - run: sudo apt-get install mysql-client
 
       # Download and cache dependencies
       - restore_cache:
