--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           username: tpenney89
           password: Greenmonster12  # context / project UI env-var reference
         environment:
-          #MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_ROOT_PASSWORD: Greenmonster12
           MYSQL_DATABASE: quotes
           MYSQL_USER: monty
           MYSQL_PASSWORD: some_pass
