--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,12 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
+      - image: circleci/mysql:latest-ram
+        enviornment:
+          - MYSQL_ROOT_PASSWORD: some_pass
+          - MYSQL_DATABASE: stocks
+          - MYSQL_USER: monty
+          - MYSQL_PASSWORD: some_pass
 
     working_directory: ~/repo
 
@@ -23,6 +29,7 @@ jobs:
 
     steps:
       - checkout
+      - run: sudo apt-get install -y mysql-client
 
       # Download and cache dependencies
       - restore_cache:
