--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo apt-get install -y mysql-client
+      - run: sudo apt install -y mysql-client
 
       # Download and cache dependencies
       - restore_cache:
